resolve comments from TestFlight part1
